# NeuroForge

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md
.agents/skills/neuroforge-autograd-engine/: SKILL.md
.agents/skills/neuroforge-math-core/: SKILL.md
.agents/skills/neuroforge-nn-layers/: SKILL.md
.agents/skills/neuroforge-training-loop/: SKILL.md
.agents/skills/neuroforge-visualization-lab/: SKILL.md
data/: linear_regression.csv  population_regression.csv
docs/: architecture.md  autograd.md  data.md  examples.md  release-notes.md  roadmap.md  serialization.md  tensor.md  training.md  validation.md  visualization.md
docs/planning/: 00-overview.md  01-orchestration.md  02-phase-1-skeleton.md  03-phase-2-math-core.md  04-phase-3-nn-loss-optim.md  05-phase-4-training-xor.md  06-phase-5-autograd.md  07-phase-6-data-metrics-serialization.md  08-phase-7-visualization.md  09-phase-8-polish-release.md  10-phase-9-model-features.md  11-phase-10-general-visual-lab.md
examples/: CMakeLists.txt  dense_classification.cpp  linear_regression.cpp  population_regression.cpp  xor.cpp
include/neuroforge/: neuroforge.hpp
include/neuroforge/autograd/: Value.hpp
include/neuroforge/core/: Random.hpp  Shape.hpp  Tensor.hpp
include/neuroforge/data/: Batch.hpp  CSVDataset.hpp  DataLoader.hpp  Dataset.hpp  TrainTestSplitter.hpp
include/neuroforge/losses/: BinaryCrossEntropyLoss.hpp  CrossEntropyLoss.hpp  LossFunction.hpp  MAELoss.hpp  MSELoss.hpp
include/neuroforge/metrics/: Metrics.hpp
include/neuroforge/nn/: Dropout.hpp  LeakyReLU.hpp  Linear.hpp  Module.hpp  Parameter.hpp  ReLU.hpp  Sequential.hpp  Sigmoid.hpp  Softmax.hpp  Tanh.hpp
include/neuroforge/optim/: Adam.hpp  MomentumSGD.hpp  Optimizer.hpp  SGD.hpp
include/neuroforge/serialization/: ModelLoader.hpp  ModelSaver.hpp
include/neuroforge/training/: Trainer.hpp  TrainingConfig.hpp  TrainingHistory.hpp
include/neuroforge/visualization/: VisualSession.hpp  VisualizationData.hpp
src/autograd/: Value.cpp
src/core/: Random.cpp  Shape.cpp  Tensor.cpp
src/data/: CSVDataset.cpp  DataLoader.cpp  Dataset.cpp  TrainTestSplitter.cpp
src/losses/: BinaryCrossEntropyLoss.cpp  CrossEntropyLoss.cpp  MAELoss.cpp  MSELoss.cpp
src/metrics/: Metrics.cpp
src/nn/: Dropout.cpp  LeakyReLU.cpp  Linear.cpp  Module.cpp  Parameter.cpp  ReLU.cpp  Sequential.cpp  Sigmoid.cpp  Softmax.cpp  Tanh.cpp
src/optim/: Adam.cpp  MomentumSGD.cpp  SGD.cpp
src/serialization/: ModelLoader.cpp  ModelSaver.cpp
src/training/: Trainer.cpp  TrainingHistory.cpp
src/visualization/: VisualSession.cpp  VisualizationData.cpp
tests/: CMakeLists.txt  test_autograd.cpp  test_data.cpp  test_losses.cpp  test_metrics.cpp  test_nn.cpp  test_optim.cpp  test_serialization.cpp  test_shape.cpp  test_smoke.cpp  test_tensor.cpp  test_training.cpp  test_visualization.cpp
tools/visual_lab/: CMakeLists.txt  DatasetScatterView.cpp  DatasetScatterView.hpp  DecisionBoundaryView.cpp  DecisionBoundaryView.hpp  GradientView.cpp  GradientView.hpp  LossPlotView.cpp  LossPlotView.hpp  ModelGraphView.cpp  ModelGraphView.hpp  TensorInspectorView.cpp  TensorInspectorView.hpp  VisualApp.cpp  VisualApp.hpp  XorDecisionView.cpp  XorDecisionView.hpp  main.cpp
